Route CONTROL_ONLY through unified adapter delivery